feat(blocks): add Dice Forge rendering and crafting mechanics
This commit introduces new rendering features for the Dice Forge block, including item orbiting and convergence effects, enhancing the visual experience during the crafting process. It also implements server-side crafting logic, which allows for the consumption of items and a crafting progression system.

Includes:
- New `DiceForgeOrbitRenderer` and `DiceForgeConvergenceRenderer` classes for rendering enhancements.
- Updated `DiceForgeBlockEntity` for managing crafting state and progress.
- Refactored rendering methods in `DiceForgeBlockEntityRenderer`.